--- a/web_client_workspace/01_html/index.html
+++ b/web_client_workspace/01_html/index.html
@@ -11,9 +11,17 @@
             <li>a</li>
             <li>b</li>
             <li>c</li>
+            <li>d</li>
             <li><a href="01_text.html">text관련</a></li>
             안녕안녕안녕
+            emmit <!--자동태그 완성기능-->
+            <li></li>
         </ul>
     </body>
+
+
+
+
+    
 
 </html>
