--- a/web_client_workspace/01_html/index.html
+++ b/web_client_workspace/01_html/index.html
@@ -30,14 +30,15 @@
             <li>c</li>
 
             <!-- li>a : emmit | li태그 하에 a태그를 만들겠다 -->
-            <li> <a href = "01_text.html">text관련</a> </li>
+            <li> <a href = "01_text.html" target="_parent">text관련</a> </li>
                 <!--하이퍼 텍스트 (링크걸기)-->
                 <!-- <a  href = "이동하고자 하는 주소 (파일명.html)"> 링크에 제시할 내용 </a> -->
-            <li> <a href="02_list.html">list관련</a></li>
+            <li> <a href="02_list.html" target="_top">list관련</a></li>
+            <li><a href="./실습문제_목록.html">@실습문제 : 목록</a></li>
             <!-- href 속성에 적을 수 있는 것들 
                  절대주소 : root가 어디인지 알려주는 것 (시작루트부터 작성)
                 (ex. 윈도우 C:\users\~, 맥 /users/user1, 웹상의 주소 http://~)
-                 상대주소 : 현재 페이지부터 경로를 파악
+                상대주소 : 현재 페이지부터 경로를 파악
                  (./~ 현재디렉토리, ../~ 부모디렉토리)
                  cf. ./는 생략 가능
 
@@ -50,10 +51,17 @@
                  Q3.
                 /a/b/c/test.html -> a/b/kkk.html
                 <a href = "../kkk.html">                             -->
-            <li><a href="./실습문제_목록.html">@실습문제 : 목록</a></li>
             <li><a href="./03_table.html">table 관련</a></li>
             <li><a href="./04_block_inline_element.html">block요소 | inline요소</a></li>
             <li><a href="./05_img.html">이미지관련</a></li>
+            <li><a href="./06_hyperlink.html">링크관련</a></li>
+            <li><a href="./07_media.html">미디어관련</a></li>
+            <li><a href="./08_form.html">from 관련</a></li>
+            <li><a href="./HTML종합실습문제1.html">HTML종합실습문제1</a></li>
+
+
+
+
         </ul>
         <!--ul>li를 부모자식 관계로 사용하면 글머리 기호 + li 작성부분이 들여쓰기 처리됨-->
         <li>d</li> 
