--- a/web_client_workspace/01_html/index.html
+++ b/web_client_workspace/01_html/index.html
@@ -25,6 +25,7 @@
         <p>Hyper Text Markup Language</p>
         <hr> <!--수평 줄긋기-->
         <ul> <!--목록-->
+            <!--ul>li를 부모자식 관계로 사용하면 글머리 기호 + li 작성부분이 들여쓰기 처리됨-->
             <li>a</li> <!--부모 ul태그의 자식 태그-->
             <li>b</li>
             <li>c</li>
@@ -58,14 +59,12 @@
             <li><a href="./07_media.html">미디어관련</a></li>
             <li><a href="./08_form.html">from 관련</a></li>
             <li><a href="./HTML종합실습문제1.html">HTML종합실습문제1</a></li>
+            <li><a href="./HTML종합실습문제2.html">HTML종합실습문제2</a></li>
 
 
 
 
         </ul>
-        <!--ul>li를 부모자식 관계로 사용하면 글머리 기호 + li 작성부분이 들여쓰기 처리됨-->
-        <li>d</li> 
-        <!--li만 작성시 들여쓰기 없이 글머리 기호만 작성됨-->
     </body>
 
 </html>
