--- a/web_client_workspace/02_css/index.html
+++ b/web_client_workspace/02_css/index.html
@@ -14,6 +14,8 @@
     <ul>
         <li><a href="01_hellocss.html">Hello CSS</a></li>
         <li><a href="02_selector.html">선택자</a></li>
+        <li><a href="03_font.html">선택자</a></li>
+
     </ul>
 </body>
 </html>
