--- a/web_client_workspace/01_html/04_block_inline_element.html
+++ b/web_client_workspace/01_html/04_block_inline_element.html
@@ -49,7 +49,7 @@
 
 
     <h1>inline요소</h1>
-    <!-- div [짧은 문구를 감싸는 영역태그]
+    <!-- span [짧은 문구를 감싸는 영역태그]
          inline형식의공간을분할(수평으로공간분할) -->
     <!-- 컨텐츠영역만을 너비로 사용하므로, 태그 나열시 줄바꿈되지 않고 옆으로 배치됨 -->
     <!-- span{span$}*3 -->
