--- a/web_client_workspace/03_javascript/index.html
+++ b/web_client_workspace/03_javascript/index.html
@@ -11,6 +11,8 @@
     <hr>
     <ul>
         <li><a href="01_hello_js.html">Hello JavaScript</a></li>
+        <li><a href="02_datatype.html">Data Type</a></li>
+        <li><a href="03_getElement.html">Get Element</a></li>
     </ul>
 </body>
 </html>
