--- a/web_client_workspace/03_javascript/01_hello_js.html
+++ b/web_client_workspace/03_javascript/01_hello_js.html
@@ -13,34 +13,37 @@
     </script>
     <script src="js/sample.js"></script>
     <!-- <script src="스크립트의 위치"></script> 
-        이 스크립트는 여기에 있습니다! 하고 알려주는 것-->
+        이 스크립트는 여기에 있습니다! 하고 알려주는 것
+       -->
   </head>
   <body>
     <h1>Hello JavaScript</h1>
     <h2>JavaScript를 사용하는 3가지 방법</h2>
-    <!-- 방법1 : 태그의 inline 이벤트 속성 작성
-                 이벤트속성 = "자바스크립트 영역" -->
-    <!-- cf. alert - 팝업창
-             console.log - 개발도구 - console에 출력됨 -->
+    <!-- 방법1 : [inline방식] 태그의 inline 이벤트 속성 작성 
+                 <태그명 on 이벤트 = "함수명('내용');"> -->
     <input
       type="button"
       value="실행1"
       onclick="alert('안녕~ 나 자스야!'); console.log('안녕~ 여기도 쟈스야!');"
     />
 
-    <!-- 방법2 : 문서내 내부 script태그를 작성 -->
+    <!-- 방법2 : [internal 방식] 문서 내부 script태그를 작성 
+                 <script> 함수명('내용'); </script> -->
     <input type="button" value="실행2" onclick="foo();">
-    <!-- script best position1 : head 태그 내 (ref. 8줄 ~ 13줄) -->
-    <!-- 브라우저가 html문서를 만나면 위에서부터 아래로 실행
-        -> head태그 내의 script태그를 만남 -> 그 즉시 실행 -> body실행 -->
+    
+    <!-- script best position1 : head 태그 내 (ref. 8줄 ~ 13줄) 
+         브라우저가 html문서를 만나면 위에서부터 아래로 실행
+        head태그에 작성 - head태그 내의 script태그를 만남 -> 그 즉시 실행 -> body실행 -->
 
     <!-- script best position2 : body 태그 내 -->
     <script>
         alert('html태그를 모두 해석하고, 그 다음에 나를 실행한다');
     </script>
-    <!-- html을 모두 처리한 후, 그 후 script가 처리됨 -->
+    <!-- body태그에 작성 - html을 모두 처리한 후, 그 후 script가 처리됨 -->
 
     <!-- 내부스크립트에 작성하되, 함수를 이용하는 방식 -->
+    <!-- <script> function 함수명() { 함수('내용');}
+                   함수명(); </script> -->
     <script>
         // 함수 선언
         function foo() {
@@ -49,13 +52,17 @@
         // 함수 호출 : 함수 선언만 해서는 실행되지 않는다.
         foo();
     </script>
-    <!-- + html태그의 event로 처리할 수도 있다 (ref. 30줄) -->
+    <!-- + html태그의 event로 처리할 수도 있다 (ref. 31줄) -->
 
     <!-- 방법3 : 외부 스크립트에 작성 
-          ref. js폴더 - sample.js 1줄
-          -> head태그 - script 태그
-             ref. 14줄 ~ 16줄 ->
-    <input type="button" value="실행3">
+          1) .js폴더에 실행코드 작성 (ref. js폴더 - sample.js 3줄)
+             함수명('내용');
+          2) head태그 - script 태그 (ref. 14줄 ~ 16줄)
+             <script src = "경로"> </script> 
+            -> sample.js내의 내용이 스크립트 태그 안에 작성된 것처럼 처리됨 -->
+    
+    <!-- 외부 스크립트의 함수 사용 -->
+    <input type="button" value="실행3" onclick="bar();">
    
   </body>
 </html>
